# Velocity-Engine

./: .gitignore  CMakeLists.txt
assets/shaders/scene/: fragmentShader.frag  vertexShader.vert
assets/shaders/ui/: uiFragmentShader.frag  uiVertexShader.vert
include/core/: engine.hpp  engineContext.hpp  engineState.hpp  input.hpp  ressources.hpp  time.hpp  window.hpp
include/math/: mat4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/rendering/: camera.hpp  material.hpp  mesh.hpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp  window.hpp
include/ui/: engineUi.hpp  uiButton.hpp  uiElement.hpp  uiManager.hpp  uiText.hpp
src/core/: engine.cpp  engineContext.cpp  input.cpp  main.cpp  time.cpp  window.cpp
src/math/: vector2.cpp  vector3.cpp  vector4.cpp
src/rendering/: camera.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp  window.cpp
src/ui/: engineUi.cpp  uiElement.cpp  uiManager.cpp  uiText.cpp
